--- a/template/index.html
+++ b/template/index.html
@@ -9,7 +9,7 @@
 		</p>
 </section>
 <div class="grid-img">
-	<h2>Nos compus en France</h2>
+	<h2>Nos campus en France</h2>
 	<ul>
 		<li><img src="./asset/ambiance_01.jpg" alt="Paris" /></li>
 		<li><img src="./asset/nantes.jpg" alt="Nantes" /></li>
@@ -27,5 +27,5 @@
 	</ul>
 </div>
 <footer>
-	<p>&copy - EDW - 2020</p>
+	<p>&copy; - EDW - 2020</p>
 </footer>
