--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,600i');
 
 body{
-		font:16px 'Open Sans',sans-serif;
+		font:1rem 'Open Sans',sans-serif;
 		margin:0;
 	}
 	*{
@@ -12,7 +12,7 @@ body{
 			margin:0;
 	}
 		main{
-			width:1024px;
+			width:64rem;
 			margin:0 auto;
 	}
 	ul{
@@ -28,16 +28,16 @@ body{
 		color: #222;
 	}
 	p{
-		line-height: 22px;
+		line-height: 1.375rem;
 	}
 
 /*thème********/
 ul li{
 	display: inline-block;
 	font-size: 1rem;
-	width: 200px;
+	width: 12.5rem;
 	text-align: center;
-	line-height: 45px;
+	line-height: 3rem;
 	
 
 }
@@ -53,12 +53,12 @@ ul li > a:hover{
 }
 h1{
 	text-align: center;
-	line-height: 45px;
+	line-height: 3rem;
 	margin: 30px 0;
 }
 .warning{
-	width: 400px;
-	padding:15px;
+	width: 25rem;
+	padding:1rem;
 	text-align: center;
 	margin: 0 auto;
 	background: #D50000;
@@ -66,7 +66,7 @@ h1{
 
 }
 section p{
-	padding:10px;
+	padding:1rem;
 	background: #fafafa;
 }
 section h2, div h2{
