--- a/template/index.html
+++ b/template/index.html
@@ -21,9 +21,9 @@
 	<h2>Nous suivre</h2>
 	<ul>
 		<li><img src="./icones/logo_facebook_3225194.png" alt="FB" /></li>
-		<li><img src="./icones/logo_twitter_3225183.png" alt="Instagram" /></li>
+		<li><img src="./icones/logo_twitter_3225183.png" alt="Twitter" /></li>
 		<li><img src="./icones/logo_instagram_3225191.png" alt="Instagram" /></li>
-		<li><img src="./icones/logo_linkedin_3225190.png" alt="Instagram" /></li>
+		<li><img src="./icones/logo_linkedin_3225190.png" alt="LinkedIn" /></li>
 	</ul>
 </div>
 <footer>
